RecyclerView and room added

--- a/app/src/main/res/layout/activity_base_data.xml
+++ b/app/src/main/res/layout/activity_base_data.xml
@@ -8,8 +8,9 @@
     tools:context=".BaseData">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:orientation="vertical"
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 </androidx.constraintlayout.widget.ConstraintLayout>
